# Malicious-Email-Scorer

./: .gitignore  README.md  data.db  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 478d0bf72381_add_reasons_to_scanhistory.py  674260af7933_initial_schema.py
api/: dependencies.py  router.py
api/routes/: blocklist.py  health.py  history.py  scan.py
api/v1/: router.py
api/v1/endpoints/: blocklist.py  health.py  history.py  scan.py
apps_script/: Code.js  appsscript.json
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: dependencies.py
backend/api/v1/endpoints/: blocklist.py  history.py
backend/core/: config.py  exceptions.py  http_client.py
backend/models/: db_models.py
backend/repositories/: blocklist.py  history.py
backend/schemas/: __init__.py  blocklist.py  email.py  history.py
backend/services/: external_intel.py  rules.py  scanner.py
backend/tests/: test_api.py  test_database.py  test_scanner.py
core/: config.py  database.py  exceptions.py  http_client.py  logging.py
crud/: crud_blocklist.py  crud_history.py
frontend/: Code.js  appsscript.json
models/: db_models.py  schemas.py
schemas/: __init__.py  email.py  intel.py
services/: analyzer.py  external_intel.py  rules.py  scanner.py
tests/: test_analyzer.py  test_api.py  test_database.py  test_external_intel.py  test_scanner.py
