[project]
name = "malicious-email-scorer"
version = "0.1.0"
description = "Malicious Email Scorer Backend"
authors = [
    {name = "Author",email = "author@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "respx (>=0.23.1,<0.24.0)"
]
